--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,8 @@
 RewriteEngine On
 RewriteRule . index.php
+<IfModule mod_headers.c>
+    Header Set Access-Control-Allow-Origin "http://localhost:63342"
+    Header Set Access-Control-Allow-Methods "GET, POST, PATCH, DELETE, OPTIONS, HEAD"
+    Header Set Access-Control-Allow-Headers "Origin, Content-Type, Authorization, Accept, Access-Control-Allow-Origin"
+    Header Set Access-Control-Allow-Credentials "true"
+</IfModule>
