Added ability of fetching, adding and deleting followed tags by user. Also site can display posts based on followed tags and started implementing routing for fetching all posts with certain tags.

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 RewriteEngine On
-RewriteRule . index.php
+RewriteBase /php-small-social-service-app
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^.*$ index.php [L]
 <IfModule mod_headers.c>
     Header Set Access-Control-Allow-Origin "http://localhost:63342"
     Header Set Access-Control-Allow-Methods "GET, POST, PATCH, DELETE, OPTIONS, HEAD"
