Added ability of adding comments to posts and fetching them, also it is possible to fetch likes data and check who liked our or someone posts. Separated js files in dashboard into smaller pieces.

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 RewriteBase /php-small-social-service-app
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^.*$ index.php [L]
 <IfModule mod_headers.c>
     Header Set Access-Control-Allow-Origin "http://localhost:63342"
