--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,12 @@
 RewriteEngine On
-RewriteBase /php-small-social-service-app
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^.*$ index.php [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php [QSA,L]
+
 <IfModule mod_headers.c>
     Header Set Access-Control-Allow-Origin "http://localhost:63342"
-    Header Set Access-Control-Allow-Methods "GET, POST, PATCH, DELETE, OPTIONS, HEAD"
+    Header Set Access-Control-Allow-Origin "https://605e-109-243-65-70.ngrok-free.app"
+    Header Set Access-Control-Allow-Methods "GET, POST, PATCH, DELETE, OPTIONS, HEAD, PUT"
     Header Set Access-Control-Allow-Headers "Origin, Content-Type, Authorization, Accept, Access-Control-Allow-Origin"
     Header Set Access-Control-Allow-Credentials "true"
 </IfModule>
