--- a/.htaccess
+++ b/.htaccess
@@ -4,8 +4,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
 
 <IfModule mod_headers.c>
-    Header Set Access-Control-Allow-Origin "http://localhost:63342"
-    Header Set Access-Control-Allow-Origin "https://605e-109-243-65-70.ngrok-free.app"
+    SetEnvIf Origin "http(s)?://(localhost:63342|[a-zA-Z0-9-]+\.ngrok-free\.app)$" ORIGIN_ALLOWED=$0
+    Header Set Access-Control-Allow-Origin "%{ORIGIN_ALLOWED}e" env=ORIGIN_ALLOWED
     Header Set Access-Control-Allow-Methods "GET, POST, PATCH, DELETE, OPTIONS, HEAD, PUT"
     Header Set Access-Control-Allow-Headers "Origin, Content-Type, Authorization, Accept, Access-Control-Allow-Origin"
     Header Set Access-Control-Allow-Credentials "true"
